# xiangqigame

./: .clang-format  .gitignore  01__core__home_8md.html  01_core_home.md  02__installing_8md.html  03__running_8md.html  03_running.md  04__notation_8md.html  04_notation.md  05__game__data_8md.html  05_components.md  06__components_8md.html  06_components.md  06_minimax_details.md  07__doxygen__guide_8md.html  07_game_data.md  404.html  BoardSpace.py  CMakeLists.txt  Classes_members_methods_from_orig_version.ods  Doxyfile  DoxyfileCpp  DoxyfilePy  LICENSE.txt  MANIFEST.in  README.md  XiangqiGame.py  ____init_____8py.html  ____init_____8py_source.html  ____main_____8py.html  ____main_____8py_source.html  _unused_setup.py  annotated.html  annotated_dup.js  app.py  app_8py.html  app_8py_source.html  bindings_8cpp.html  bindings_8cpp_source.html  board__data__structs_8hpp.html  (+820 more)
prototypes/: CMakeLists.txt  gist_simpler_mutex.cpp  gist_tr_table_purging.cpp
prototypes/array_vs_vector/: CMakeLists.txt  array_vs_vector.cpp
prototypes/board_map_text/: board_map_text  board_map_text.cpp
prototypes/concept_mixing/: CMakeLists.txt  concept_mixing.cpp
prototypes/concept_using_other_concept/: CMakeLists.txt  concept_using_other_concept.cpp  concept_using_other_concept.hpp
prototypes/concepts_dep_injection/: CMakeLists.txt  concepts_dep_injection.cpp
prototypes/crtp_constructors/: gist_crtp_constructors  gist_crtp_constructors.cpp
prototypes/crtp_with_concepts/: CMakeLists.txt  crtp_with_concepts.cpp
prototypes/fancy_pointers/: share_and_unique_ptrs  share_and_unique_ptrs.cpp
prototypes/gameboard_zcalc_decoupling/: CMakeLists.txt  gameboard_zcalc_decoupling.cpp
prototypes/heap_vs_stack_read_speeds/: CMakeLists.txt  heap_vs_stack_read_speeds.cpp
prototypes/ks_testing/: CMakeLists.txt  keys_quality.cpp
prototypes/method_ptrs/: CMakeLists.txt  method_ptrs.cpp
prototypes/player_spec/: CMakeLists.txt  player_spec.cpp
prototypes/shared_ptr_method_passing/: CMakeLists.txt  shared_ptr_method_passing.cpp
prototypes/std_bind_method_refs/: CMakeLists.txt  std_bind_method_refs.cpp
prototypes/template_factory/: CMakeLists.txt  my_template_class.hpp  template_factory.cpp  template_factory.hpp
prototypes/visitor_pattern/: visitor_pattern  visitor_pattern.cpp
prototypes/zobrist_calc_with_internal_builder/: zobrist_calc_with_internal_builder.cpp
prototypes/zobrist_callbacks_for_gameboard/: CMakeLists.txt  zobrist_callbacks_for_gameboard.cpp
prototypes/zobrist_concepts/: CMakeLists.txt  zobrist_concepts.cpp  zobrist_concepts.hpp
src/bindings/: CMakeLists.txt  bindings.cpp  xiangqigame_core.cpp
src/core/game/: CMakeLists.txt  game.cpp  game_factory.cpp  run_game.cpp
src/core/game_board/: CMakeLists.txt  game_board.cpp  game_board.hpp  game_board.tpp
src/core/gist_thread_control/: CMakeLists.txt  gist_classes_share_mutex.cpp  gist_purge_mutex_execute_around.cpp  gist_simple_execute_around.cpp  gist_simpler_mutex.cpp  gist_thread_control.cpp  gist_tr_table_purging.cpp  simpler_mutex.cpp
src/core/gists/: CMakeLists.txt  gist_key_generator.cpp  gist_key_generator.hpp  gist_ranom_ints.cpp  gist_template_dispatch.cpp
src/core/hash_calculator/: CMakeLists.txt  create_zobrist_keys.cpp  gist_random_64_128.cpp  gist_ranomd_dev  gist_ranomd_dev.cpp  hash_calculator.cpp  hash_calculator.hpp  hash_calculator_details.hpp  hash_calculator_test.cpp  key_generator.hpp  key_generator_test.cpp  keys_quality  keys_quality.cpp  random_device_keys  random_device_keys.cpp
src/core/json_internal/: CMakeLists.txt
src/core/json_io/: CMakeLists.txt  gist_template_specialize  gist_template_specialize.cpp  json_io.cpp  json_io.hpp  json_io_test.cpp
src/core/json_validation/: CMakeLists.txt  json_validation.cpp  my_schemas.cpp
src/core/jsonvalidation/: CMakeLists.txt  json_schema_validate.cpp
src/core/move_calculator/: CMakeLists.txt  move_calculator.cpp
src/core/move_evaluators/: CMakeLists.txt  evaluator_details.hpp  gist_update_ref_structs  gist_update_ref_structs.cpp  minimax_move_evaluator.tpp  move_evaluators.cpp  move_evaluators.hpp  move_evaluators.tpp  random_move_evaluator.tpp
src/core/moveselection/: CMakeLists.txt  move_evaluator_human_for_concepts.cpp  move_evaluator_minimax_for_concepts.cpp  move_evaluators.cpp
src/core/piece_points/: CMakeLists.txt  bpo_json_to_raw_json.cpp  piece_points.cpp
src/core/piece_points_spec/: CMakeLists.txt  gist_factory  gist_factory.cpp  gist_factory_2  gist_factory_2.cpp  piece_points_spec.cpp  piece_points_spec.hpp  piece_points_spec.tpp
src/core/piece_position_points/: CMakeLists.txt  bpo_json_to_raw_json.cpp  piece_position_points.cpp
src/core/points_containers/: CMakeLists.txt  points_containers.cpp  points_containers_details.hpp  points_containers_test.cpp  points_containers_test_old.cpp
src/cpp_modules/: CMakeLists.txt  cmake_option_for_clion_remote.txt  config.hpp.in  create_zobrist_keys  gmon.out
src/cpp_modules/common/: common.hpp  (+1 more)
src/xiangqigame_cpp/: CMakeLists.txt
tests/core/: CMakeLists.txt  game_board_concept_test.cpp  game_board_concept_using_typed_test_suite.cpp  game_board_test.cpp  game_points_test.cpp  gist_insert_or_assign  gist_insert_or_assign.cpp  gist_json.cpp  gist_template_with_literal  gist_template_with_literal.cpp  gist_vector_compare  gist_vector_compare.cpp  hash_calculator_test.cpp  json_io_test.cpp  json_utility_test.cpp  key_generator_test.cpp  minimax_concept_test.cpp  minimax_evaluator_test.cpp  minimax_zobrist_component_test.cpp  move_calc_timer.cpp  move_calculator_test.cpp  piece_moves_test.cpp  piece_points_bpo_test.cpp  piece_points_spec_test.cpp  piece_points_test.cpp  piece_position_points_concept_test.cpp  piece_position_points_test.cpp  points_containers_test.cpp  transposition_table_pruner_test.cpp  transposition_table_test.cpp  zobrist_calculator_concept_test.cpp  zobrist_calculator_test.cpp  zobrist_component_concept_test.cpp  zobrist_component_test.cpp  zobrist_coordinator_concept_test.cpp  zobrist_coordinator_test.cpp  zobrist_summarizer_test.cpp  zobrist_tracker_test.cpp
(+6193 files in other folders)
