[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "toml"]
build-backend = "scikit_build_core.build"

[project]
name = "xiangqigame"
version = "1.2.0"
description = "Xiangqi (Chinese Chess) for human and/or AI players"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
    {email = "dmgoodner@gmail.com"},
    {name = "Duane Goodner"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment :: Turn Based Strategy"
]
dependencies = [
    "colorama",
    "matplotlib",
    "msgspec",
    "numpy",
    "pandas",
    "mkdocstrings[python]>=0.18"
]

[project.optional-dependencies]
dev = [
    "pybind11>=2.10.0"
]
test = [
    "pytest>=7.1.0",
    "pytest-fixtures>=0.1.0"
]

[project.urls]
repository = "https://github.com/duanegoodner/xiangqigame"

[project.scripts]
play_xiangqi = "xiangqipy.__main__:main"
play_xiangqi_new = "xiangqipy.app_simple:run"

[tool.scikit-build.wheel.packages]
"xiangqipy" = "src/xiangqipy"
"xiangqipy/data" = "src/data"

# [tool.scikit-build]
# build-dir = "./skbuild"
