[metadata]
name = xiangqigame
version = 0.0.1
author = Duane Goodner
author_email = dmgoodner@gmail.com
url = https://github.com/duanegoodner/xiangqigame
description = A board game
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# [options]
# zip_safe = False
# package_dir=
#     =src
# packages = find:
setup_requires =
    cython
install_requires =
    colorama
    numpy
    nptyping
python_requires = >= 3.8
# include_package_data = True

# [options.package_data]
# * = *.json

# [options.packages.find]
# where = src

# [options.entry_points]
# console_scripts =
#     play_xiangqi = xiangqigame.__main__:main



