# add_subdirectory(concepts_dep_injection)
# add_subdirectory(crtp_with_concepts)
# add_subdirectory(ks_testing)
# add_subdirectory(tr_table_threaded_pruning)
# add_subdirectory(zobrist_callbacks_for_gameboard)
add_subdirectory(shared_ptr_method_passing)
add_subdirectory(array_vs_vector)
add_subdirectory(gameboard_zcalc_decoupling)
add_subdirectory(heap_vs_stack_read_speeds)
add_subdirectory(concept_mixing)
add_subdirectory(concept_using_other_concept)
add_subdirectory(zobrist_concepts)
add_subdirectory(method_ptrs)
add_subdirectory(std_bind_method_refs)